# ChainMail

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
src/chainmail_backend/: Cargo.toml
src/chainmail_backend/src/: lib.rs
src/chainmail_frontend/: chainmail_frontend.html  index.html  main.js  package-lock.json  package.json  tailwind.config.ts  vite.config.js
src/chainmail_frontend/assets/: main.js
src/chainmail_frontend/src/: App.jsx  App.tsx  styles.css  vite-env.d.ts
src/chainmail_frontend/src/components/: DMPanel.tsx  LetterForm.tsx  LetterList.tsx  MapView.tsx  Navbar.tsx
src/chainmail_frontend/src/lib/: agent.ts  idl.ts  types.ts
src/declarations/chainmail_backend/: index.d.ts  index.js
src/declarations/chainmail_frontend/: index.d.ts  index.js
