[package]
name = "chainmail_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.14"
ic-cdk-macros = "0.14"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["alloc"] }

[profile.release]
lto = true
opt-level = "z"
